samples/_failures_safe/1761332457_eedcb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b005b34e.c: In function ‘main’:
./samples/SAFE/__tmp_b005b34e.c:166:28: error: ‘num’ undeclared (first use in this function)
  166 |     for (size_t i = 0; i < num
      |                            ^~~
./samples/SAFE/__tmp_b005b34e.c:166:28: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b005b34e.c:166:31: error: expected ‘;’ at end of input
  166 |     for (size_t i = 0; i < num
      |                               ^
      |                               ;
./samples/SAFE/__tmp_b005b34e.c:166:5: error: expected declaration or statement at end of input
  166 |     for (size_t i = 0; i < num
      |     ^~~
